z-index-fixed

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  z-index: 998;
+  z-index: 1999;
 }
 
 .menu {
@@ -47,7 +47,7 @@
   background-color: var(--green);
   position: fixed;
   inset: 0;
-  z-index: 999;
+  z-index: 2000;
 }
 
 .nav-link-box-model-how,
@@ -102,7 +102,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: 2000;
 }
 
 @media (min-width: 768px) {
